--- a/rwd/practica-1/sass/partials/_variables.scss
+++ b/rwd/practica-1/sass/partials/_variables.scss
@@ -13,4 +13,6 @@ $blanco: #F4F4F4;
 $negro: #515251;
 $verde: #6FC493;
 $facebook: #46629E;
+$fbhover: #6D87BA;
 $twitter: #55ACEE;
+$twhover: #95C8ED;
