--- a/rwd/practica-1/sass/partials/_variables.scss
+++ b/rwd/practica-1/sass/partials/_variables.scss
@@ -5,13 +5,15 @@ $hind: 'Hind', Arial, sans-serif;
 
 //Colores --------
 
-$azul-claro: #B3DBF4;
-$azul-mar: #1674B6;
-$gris-azul: #BDCCD6;
-$cafe: #9B6026;
-$blanco: #F4F4F4;
-$negro: #515251;
-$verde: #6FC493;
+$hover: #B3DBF4;
+$titles: #1674B6;
+$bground: #BDCCD6;
+$stand-out: #9B6026;
+$white: #f2f2f2;
+$wrapper: #844035;
+$basic: #515251;
+$buttons: #6FC493;
+$buttonshv: #488e65;
 $facebook: #46629E;
 $fbhover: #6D87BA;
 $twitter: #55ACEE;
