--- a/rwd/practica-1/sass/styles.scss
+++ b/rwd/practica-1/sass/styles.scss
@@ -12,3 +12,7 @@
 @import "partials/layout";
 @import "partials/base";
 
+@import "partials/modules/header";
+@import "partials/modules/networks";
+@import "partials/modules/posts";
+@import "partials/modules/buttons";
