--- a/rwd/practica-1/sass/partials/_variables.scss
+++ b/rwd/practica-1/sass/partials/_variables.scss
@@ -7,10 +7,14 @@ $hind: 'Hind', Arial, sans-serif;
 
 $hover: #B3DBF4;
 $titles: #1674B6;
+$titlesb: #77c2f4;
 $bground: #BDCCD6;
+$bgroundb: #abcedb;
+$bgroundc: #ECECEC;
 $stand-out: #9B6026;
+$body: #1a4656;
 $white: #f2f2f2;
-$wrapper: #844035;
+$wrapper: #8E8E8E;
 $basic: #515251;
 $buttons: #6FC493;
 $buttonshv: #488e65;
