--- a/rwd/practica-1/sass/partials/modules/_header.scss
+++ b/rwd/practica-1/sass/partials/modules/_header.scss
@@ -3,55 +3,80 @@
 //
 
 .blog-header{
-	background: $bground;
-	overflow: hidden;
-	@media (min-width: 680px){
-		margin: 0 1%;
-		
-	}
-	
+    background: $bground;
+    overflow: hidden;
+    @media (min-width: 680px){
+        margin: 0 1%;
+        
+    }
+    
 }
 
 
 .nav-bar{
-	background: $bground;
-	overflow: hidden;
-	padding: 0;
-	margin: 10px 0;
-	@media (min-width: 680px){
-		margin: 10px 1%;
-	}
-	li{
-		display: inline-block;
-		width: 100%;
-		@media (min-width: 680px){
-			width: 16%;
+    background: $bgroundb;
+    border-bottom: 10px solid $basic;
+    margin: 0 0 15px 0;
+    display: none;
+    @media (min-width: 680px){
+        margin: 10px 1%;
+        background: $bgroundc;
+        display: block;
+    }
+    a{
+        @include font-size(12);
+        color: $basic;
+        font-weight: lighter;
+        &:focus{
+            background: $hover;
+        }
+    }
+    
+}
 
-		}
-		@media (min-width: 1280px){
-			width: 10%;
-		}
+.menu-bar{
+    margin: 15px 0 0 0;
+    li{
+        background: $bground;
+        border-bottom: 5px solid $basic;
+    }
+    a{
+        @include font-size(17);
+        color: $titles;
+        &:active{
+                background: $hover;
+        }
+    }
+    @media (min-width: 680px){
+        display: none;
+    }
+}
 
-	}
-	a{
-		@include font-size(12);
-		width: 100%;
-		display: inline-block;
-		padding: 7px 0 5px 3%;
-		margin: 0;
-		color: $titles;
-		font-weight: lighter;
-		&:focus{
-			background: $hover;
-		}
-		transition: all 0.6s cubic-bezier(0,0.85,0.64,0.96);
-		@media (min-width: 680px){
-			text-align: center;
-			&:hover{
-				background: $hover;
-				transition: all 0.6s cubic-bezier(0,0.85,0.64,0.96);
-			}
-		}
-	}
-	
+.bar{
+    overflow: hidden;
+    padding: 0;
+        li{
+            display: block;
+            width: 100%;
+            margin: 0 auto;
+            @media (min-width: 680px){
+                display: inline-block;
+            }
+            @media (min-width: 680px){
+                width: 15%;
+            }
+        }
+        a{
+            display: block;
+            margin: 0 auto;
+            padding: 7px 0 5px 0;
+            text-align: center;
+            transition: all 0.6s cubic-bezier(0,0.85,0.64,0.96);
+            @media (min-width: 680px){
+                &:hover{
+                    background: $hover;
+                    transition: all 0.6s cubic-bezier(0,0.85,0.64,0.96);
+                }
+            }
+        }
 }
