--- a/rwd/practica-1/css/styles.css
+++ b/rwd/practica-1/css/styles.css
@@ -116,13 +116,11 @@ footer {
 .nav-bar {
   background: #abcedb;
   border-bottom: 10px solid #515251;
-  margin: 0 0 15px 0;
-  display: none; }
+  margin: 0 0 15px 0; }
   @media (min-width: 680px) {
     .nav-bar {
       margin: 10px 1%;
-      background: #ECECEC;
-      display: block; } }
+      background: #ECECEC; } }
   .nav-bar a {
     font-size: 12px;
     font-size: 1.2rem;
@@ -130,6 +128,24 @@ footer {
     font-weight: lighter; }
     .nav-bar a:focus {
       background: #B3DBF4; }
+
+.toggle-off {
+  transition: all 0.9s cubic-bezier(0, -0.05, 0.22, 0.87); }
+  @media (min-width: 320px) {
+    .toggle-off {
+      height: 0; } }
+  @media (min-width: 680px) {
+    .toggle-off {
+      height: 42px; } }
+
+.toggle-on {
+  transition: all 0.9s cubic-bezier(0, -0.05, 0.22, 0.87); }
+  @media (min-width: 320px) {
+    .toggle-on {
+      height: 170px; } }
+  @media (min-width: 680px) {
+    .toggle-on {
+      height: 42px; } }
 
 .menu-bar {
   margin: 15px 0 0 0; }
